@startuml
'https://plantuml.com/component-diagram



class GameState{
}


class Hero{
+ move() : void
}

class Shooter{
+ move() : void
+ killHero() : void
}

class Enemies{
+ move() : void
+ killHero() : void
}

note left of Shooter: Quando colide com um tiro
note right of Enemies: Quando colide com um inimigo

GameState <--> Hero

Hero <--> Shooter
Hero <--> Enemies
@enduml